--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <li><a href="heroes.html">Heroes</a></li>
                 <li><a href="maps.html">Maps</a></li>
                 <li><a href="competitive.html">Competitive</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="about.html">About</a></li>
             </ul>
         </div>
     </header>
@@ -25,7 +25,7 @@
         <div>
             <h1>Who we Are?</h1>
             <div class="imagelogo">
-                <img src="sources/riot-games-logo.png" alt="logo"  width="410" height="130">
+                <img src="sources/riot-games-logo.png" alt="riot games"  width="410" height="130">
             </div>
             
             <p>Riot Games was founded in 2006 to develop, publish, and support the most player-focused games in the world. In 2009, we released our debut title, League of Legends, to worldwide acclaim. League has gone on to be the most-played PC game in the world and a key driver of the explosive growth of esports. </p>
@@ -48,11 +48,11 @@
         </div>
         <div class="founders">
             <div class="founder">
-                <img src="sources/founder1.jpg" width="250" height="250">
+                <img src="sources/founder1.jpg" width="250" height="250" alt="Brandon Beck">
                 <p>Brandon Beck</p>
             </div>
             <div class="founder">
-                <img src="sources/foiunder2.jpg" width="250" height="250">
+                <img src="sources/foiunder2.jpg" width="250" height="250" alt="Marc Merill">
                 <p>Marc Merrill</p>
             </div>
         </div>
