--- a/competitive.html
+++ b/competitive.html
@@ -16,13 +16,12 @@
             <ul>
                 <li><a href="heroes.html">Heroes</a></li>
                 <li><a href="maps.html">Maps</a></li>
-                <li><a href="competitive.html">Competitive</a></li>
+                <li><a class="active" href="competitive.html">Competitive</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </header>
     <div class="current_poster">
-        <img src="sources/VCT-Game-Changers-scaled.jpg" height="1152" width="100%">
     </div>
     <div class="current_event_title">
             <h1>VCT Game Changers 2022</h1>
@@ -35,37 +34,37 @@
     </div>
     <div class="row">
          <div class="teams_container">
-            <img src="sources/Cloud-9-Symbol.jpg" width="150" height="150">
+            <img src="sources/Cloud-9-Symbol.jpg" width="150" height="150" alt="cloud9">
             <p>Cloud 9 White</p>
         </div>
         <div class="teams_container">
-            <img src="sources/Shopify_Rebellion_2021_darkmode.png" width="150" height="150">
+            <img src="sources/Shopify_Rebellion_2021_darkmode.png" width="150" height="150" alt="shopify rebellion">
             <p>Shopify Rebellion</p>
         </div>
         <div class="teams_container">
-            <img src="sources/g2_logo.png" width="150" height="150">
+            <img src="sources/g2_logo.png" width="150" height="150" alt="g2 gozen">
             <p>G2 Gozen</p>
         </div>
         <div class="teams_container">
-            <img src="sources/guildx.jpg" width="150" height="150">
+            <img src="sources/guildx.jpg" width="150" height="150" alt="guild x">
             <p>Guild X</p>
         </div>
     </div>
     <div class="row">
         <div class="teams_container">
-            <img src="sources/X10_Sapphire_logo.png" width="150" height="150">
+            <img src="sources/X10_Sapphire_logo.png" width="150" height="150" alt="x10 sapphire">
             <p>X10 Sapphire</p>
         </div>
         <div class="teams_container">
-            <img src="sources/fennel_logo.png" width="150" height="150">
+            <img src="sources/fennel_logo.png" width="150" height="150" alt="fennel female">
             <p>Fennel Female</p>
         </div>
         <div class="teams_container">
-            <img src="sources/team_liquid_logo.png" width="150" height="150">
+            <img src="sources/team_liquid_logo.png" width="150" height="150" alt="team liquid brazil">
             <p>Team Liquid Brazil</p>
         </div>
         <div class="teams_container">
-            <img src="sources/kru_fem.png" width="150" height="150">
+            <img src="sources/kru_fem.png" width="150" height="150" alt="kru fem">
             <p>Kru Fem</p>
         </div>
     </div>
@@ -75,14 +74,14 @@
     <div class="tournaments">
         <div class="tournament">
             <h3>Champions Tour Brazil Split 1: Challengers</h3>
-            <a href="https://www.vlr.gg/event/1273/champions-tour-brazil-split-1-challengers" target="_blank"><img src="sources/brazil_challenger.png"  width="550" height="162"></a>
+            <a href="https://www.vlr.gg/event/1273/champions-tour-brazil-split-1-challengers" target="_blank"><img src="sources/brazil_challenger.png"  width="550" height="162" alt="brazil challenger"></a>
             <p>Part of the Valorant Champions Tour, Riot's official 2023 tournament circuit.</p>
             <h4>Nov 27, 2022 - Mar 19, 2023</h4>
             <h4>Prize pool: $78.000</h4>
         </div>
         <div class="tournament">
             <h3>Champions Tour North America Split 1: Challengers</h3>
-            <a href="https://www.vlr.gg/event/1309/champions-tour-north-america-split-1-challengers" target="_blank"><img src="sources/VCT_Challengers_NA_lightmode.png"  width="550" height="162"></a>
+            <a href="https://www.vlr.gg/event/1309/champions-tour-north-america-split-1-challengers" target="_blank"><img src="sources/VCT_Challengers_NA_lightmode.png"  width="550" height="162" alt="north america challenger"></a>
             <p>Part of the Valorant Champions Tour, Riot's official 2023 tournament circuit.</p>
             <h4>Jan 16, 2023 - Mar 14, 2023</h4>
             <h4>Prize pool: TBD</h4>
