--- a/heroes.html
+++ b/heroes.html
@@ -14,7 +14,7 @@
         </div>
         <div class="topmenu">
             <ul>
-                <li><a href="heroes.html">Heroes</a></li>
+                <li><a class="active" href="heroes.html">Heroes</a></li>
                 <li><a href="maps.html">Maps</a></li>
                 <li><a href="competitive.html">Competitive</a></li>
                 <li><a href="about.html">About</a></li>
@@ -26,7 +26,7 @@
     </div>
     <div class="chapter_header">
         <div class="chapter_logo">
-            <img src="sources/Duelist.png" width="80" height="80">
+            <img src="sources/Duelist.png" width="80" height="80" alt="duelists">
         </div>
         <div class="chapter_title">
             <h2>Duelists</h2>
@@ -37,34 +37,34 @@
         <p>Duelists are one of the four roles that agents are divided into in VALORANT. Agents under this role have abilities that allow them to focus on being the first to enter sites and engage the enemy.</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/jett-avatar.jpg" width="100" height="100">
+            <img src="sources/jett-avatar.jpg" width="100" height="100" alt="jett">
             <p>Jett</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/phoenix-avatar.jpg" width="100" height="100">
+            <img src="sources/phoenix-avatar.jpg" width="100" height="100" alt="phoenix">
             <p>Phoenix</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/raze-avatar.jpg" width="100" height="100">
+            <img src="sources/raze-avatar.jpg" width="100" height="100" alt="raze">
             <p>Raze</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/reyna-avatar.jpg" width="100" height="100">
+            <img src="sources/reyna-avatar.jpg" width="100" height="100" alt="reyna">
             <p>Reyna</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/yoru-avatar.jpg" width="100" height="100">
+            <img src="sources/yoru-avatar.jpg" width="100" height="100" alt="yoru">
             <p>Yoru</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/neon-avatar.png" width="100" height="100">
+            <img src="sources/neon-avatar.png" width="100" height="100" alt="neon">
             <p>Neon</p>
         </div>
     </div>
 
     <div class="chapter_header">
         <div class="chapter_logo">
-            <img src="sources/Controller.png" width="80" height="80">
+            <img src="sources/Controller.png" width="80" height="80" alt="controllers">
         </div>
         <div class="chapter_title">
             <h2>Controllers</h2>
@@ -75,23 +75,23 @@
             <p>Controllers are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role allow them to assist their teammates by cutting enemy vision, taking control of an area, and forcing enemies into choke points.</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/viper-avatar.jpg" width="100" height="100">
+            <img src="sources/viper-avatar.jpg" width="100" height="100" alt="viper">
             <p>Viper</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/brimstone-avatar.jpg" width="100" height="100">
+            <img src="sources/brimstone-avatar.jpg" width="100" height="100" alt="brimstone">
             <p>Brimstone</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/omen-avatar.jpg" width="100" height="100">
+            <img src="sources/omen-avatar.jpg" width="100" height="100" alt="omen">
             <p>Omen</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/astra_avatar.png" width="100" height="100">
+            <img src="sources/astra_avatar.png" width="100" height="100" alt="astra">
             <p>Astra</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/harbor-avatar.png" width="100" height="100">
+            <img src="sources/harbor-avatar.png" width="100" height="100" alt="harbor">
             <p>Harbor</p>
         </div>
     </div>
@@ -99,7 +99,7 @@
 
     <div class="chapter_header">
         <div class="chapter_logo">
-            <img src="sources/Initiator.png" width="80" height="80">
+            <img src="sources/Initiator.png" width="80" height="80" alt="initiators">
         </div>
         <div class="chapter_title">
             <h2>Initiators</h2>
@@ -110,23 +110,23 @@
             <p>Initiators are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on initiating attacks on site, flushing enemies out of hiding spots and corners in order to assist the team when charging into battle.</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/sova-avatar.jpg" width="100" height="100">
+            <img src="sources/sova-avatar.jpg" width="100" height="100" alt="sova">
             <p>Sova</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/skye-avatar.jpg" width="100" height="100">
+            <img src="sources/skye-avatar.jpg" width="100" height="100" alt="skye">
             <p>Skye</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/breach-avatar.jpg" width="100" height="100">
+            <img src="sources/breach-avatar.jpg" width="100" height="100" alt="breach">
             <p>Breach</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/kayo-avatar.png" width="100" height="100">
+            <img src="sources/kayo-avatar.png" width="100" height="100" alt="kayo">
             <p>Kayo</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/fade-avatar.png" width="100" height="100">
+            <img src="sources/fade-avatar.png" width="100" height="100" alt="fade">
             <p>Fade</p>
         </div>
     </div>
@@ -134,7 +134,7 @@
 
     <div class="chapter_header">
         <div class="chapter_logo">
-            <img src="sources/Sentinel.png" width="80" height="80">
+            <img src="sources/Sentinel.png" width="80" height="80" alt="sentinels">
         </div>
         <div class="chapter_title">
             <h2>Sentinels</h2>
@@ -145,19 +145,19 @@
             <p>Sentinels are one of the four roles that agents are divided into in VALORANT. The abilities of agents under this role focus on defensive play, with emphasis on supporting the rest of the team through providing intel, anchoring down sites, and preventing the enemy from flanking.</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/sage-avatar.jpg" width="100" height="100">
+            <img src="sources/sage-avatar.jpg" width="100" height="100" alt="sage">
             <p>Sage</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/cypher-avatar.jpg" width="100" height="100">
+            <img src="sources/cypher-avatar.jpg" width="100" height="100" alt="cypher">
             <p>Cypher</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/killjoy-avatar.jpg" width="100" height="100">
+            <img src="sources/killjoy-avatar.jpg" width="100" height="100" alt="killjoy">
             <p>Killjoy</p>
         </div>
         <div class="chapter_photos">
-            <img src="sources/chamber-avatar.png" width="100" height="100">
+            <img src="sources/chamber-avatar.png" width="100" height="100" alt="chamber">
             <p>Chamber</p>
         </div>
     </div>
