--- a/maps.html
+++ b/maps.html
@@ -15,14 +15,14 @@
         <div class="topmenu">
             <ul>
                 <li><a href="heroes.html">Heroes</a></li>
-                <li><a href="maps.html">Maps</a></li>
+                <li><a class="active" href="maps.html">Maps</a></li>
                 <li><a href="competitive.html">Competitive</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
     </header>
     <div class="topnav">
-       <img src="sources/map_topnav.png" width="100%" height="700">
+       <img src="sources/map_topnav.png" width="100%" height="700" alt="map picture">
     </div>
     <div class="topnavtitle">
         <h1>Maps</h1>
@@ -35,35 +35,35 @@
         </div>
         <div class="maprow">
             <div class="singlemap">
-                <img src="sources/bind_map.png" width="300px" height="150px">
+                <img src="sources/bind_map.png" width="300px" height="150px" alt="bind">
                 <h2>Bind</h2>
             </div>
             <div class="singlemap">
-                <img src="sources/ascent_map.png" width="300px" height="150px">
+                <img src="sources/ascent_map.png" width="300px" height="150px" alt="ascent">
                 <h2>Ascent</h2>
             </div>
             <div class="singlemap">
-                <img src="sources/haven_map.png" width="300px" height="150px">
+                <img src="sources/haven_map.png" width="300px" height="150px" alt="haven">
                 <h2>Haven</h2>
             </div>
         </div>
         <div class="maprow2">
             <div class="singlemap">
-                <img src="sources/icebox_map.png" width="300px" height="150px">
+                <img src="sources/icebox_map.png" width="300px" height="150px" alt="icebox">
                 <h2>Icebox</h2>
             </div>
             <div class="singlemap">
-                <img src="sources/breeze_map.png" width="300px" height="150px">
+                <img src="sources/breeze_map.png" width="300px" height="150px" alt="breeze">
                 <h2>Breeze</h2>
             </div>
             <div class="singlemap">
-                <img src="sources/fracture_map.png" width="300px" height="150px">
+                <img src="sources/fracture_map.png" width="300px" height="150px" alt="fracture">
                 <h2>Fracture</h2>
             </div>
         </div>
         <div class="maprow3">
             <div class="singlemap">
-                <img src="sources/pearl_map.png" width="300px" height="150px">
+                <img src="sources/pearl_map.png" width="300px" height="150px" alt="pearl">
                 <h2>Pearl</h2>
             </div>
         </div>
